# jmcomic-downloader

./: .prettierrc  LICENSE  README.md  components.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: Publish.yml  close-default-title-issue.yml
src/: App.vue  AppContent.vue  bindings.ts  main.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  download_manager.rs  errors.rs  events.rs  export.rs  extensions.rs  jm_client.rs  lib.rs  logger.rs  main.rs  responses.rs  save_archive.rs  types.rs  utils.rs
src-tauri/src/responses/: get_chapter_resp_data.rs  get_comic_resp_data.rs  get_favorite_resp_data.rs  get_user_profile_resp_data.rs  get_weekly_info_resp_data.rs  get_weekly_resp_data.rs  mod.rs  search_resp.rs  search_resp_data.rs  toggle_favorite_resp_data.rs
src-tauri/src/types/: archive_format.rs  chapter_info.rs  comic.rs  comic_info.rs  download_format.rs  favorite_sort.rs  get_favorite_result.rs  get_weekly_result.rs  log_level.rs  mod.rs  proxy_mode.rs  search_result.rs  search_sort.rs
src/components/: AboutDialog.vue  AlbumCard.vue  ChapterPane.vue  ComicCard.vue  CompletedProgresses.vue  DownloadAllFavoriteButton.vue  DownloadedComicCard.vue  DownloadingList.vue  FavoritePane.vue  FloatLabelInput.vue  Greet.vue  IconButton.vue  LogViewer.vue  LoginDialog.vue  SearchPane.vue  SettingsDialog.vue  UncompletedProgresses.vue
src/dialogs/: AboutDialog.vue  LoginDialog.vue  SettingsDialog.vue
src/panes/: ChapterPane.vue  DownloadedPane.vue  DownloadingPane.vue  FavoritePane.vue  SearchPane.vue  WeeklyPane.vue
src/panes/DownloadedPane/: DownloadedPane.vue
src/panes/DownloadedPane/components/: DownloadedComicCard.vue  UpdateDownloadedComicsButton.vue
src/panes/ProgressesPane/: ProgressesPane.vue
src/panes/ProgressesPane/components/: CompletedProgresses.vue  ExportProgress.vue  ExportProgresses.vue  UncompletedProgresses.vue
